tests/files/flow_controller_tests/should_run/042.cmdr
x = parseBool("true");
print x;
