tests/files/flow_controller_tests/should_fail/095.cmdr
x = "cat";
print arcsinh(x);